Fixes navigation alignment issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -992,7 +992,7 @@ footer.bk-footer h2 {
 
     .widget.extendednavigation ul li a,
     .widget.extendednavigation ul li.folder .text {
-        padding: 12px 0
+        padding: 12px 15px;
     }
 
     .widget.extendednavigation ul li:hover > ul {
